--- a/board_price_list2.html
+++ b/board_price_list2.html
@@ -57,13 +57,13 @@
 
             <span class="m-menu-t">一般業務</span>
             <div class="m-smenu">
-              <a class='l-menu-active' href="board_price_list.html">詢價列表</a>
+              <a href="board_price_list.html">詢價列表</a>
               <a href="board_sales_report.html">業務報表</a>
             </div>
 
             <span class="m-menu-t">資深業務</span>
             <div class="m-smenu">
-              <a href="board_price_list2.html">詢價列表</a>
+              <a class='l-menu-active' href="board_price_list2.html">詢價列表</a>
               <a href="board_sales_report2.html">業務報表</a>
             </div>
 
@@ -93,7 +93,7 @@
           <div class='centBoxs'>
             <div class='boxsFull'>
               <p class="t-blue-20 p-d-30">詢價單列表</p>
-              <a class='btn-outline-blue icon-add order-r' href="board_price_edit.html">&nbsp;新增詢價單</a>
+              <a class='btn-outline-blue icon-add order-r' href="board_price_edit2.html">&nbsp;新增詢價單</a>
             </div>
 
             <div class='boxsFull m-d-25'>
@@ -196,8 +196,8 @@
             </div>
 
             <div class='boxsFull m-td-25'>
-              <a class='btn-half-grey lh-30 order-r m-l-15' href="index.html">清除重填</a>
-              <a class='btn-half-blue icon-search order-r' href="index.html">&nbsp;搜尋</a>
+              <button class='btn-half-grey lh-30 order-r m-l-15'>清除重填</button>
+              <button class='btn-half-blue icon-search order-r'>&nbsp;搜尋</button>
             </div>
             
 
@@ -240,7 +240,7 @@
                   <p class='table-box10'>2</p>
                   <p class='table-box10 t-red'>大單</p>
                   <p class='table-box10'>
-                    <a class='iconLink linkGrey icon-create' href="board_price_edit21.html"></a>
+                    <a class='iconLink linkGrey icon-create' href="board_price_edit2.html"></a>
                   </p>
                 </div>
                 <!-- 02 -->
@@ -253,7 +253,7 @@
                   <p class='table-box10'>2</p>
                   <p class='table-box10 t-red'>大單</p>
                   <p class='table-box10'>
-                    <a class='iconLink linkGrey icon-create' href="board_price_edit21.html"></a>
+                    <a class='iconLink linkGrey icon-create' href="board_price_edit2.html"></a>
                   </p>
                 </div>
                 <!-- 03 -->
@@ -266,7 +266,7 @@
                   <p class='table-box10'>2</p>
                   <p class='table-box10 t-red'>&nbsp;</p>
                   <p class='table-box10'>
-                    <a class='iconLink linkGrey icon-create' href="board_price_edit21.html"></a>
+                    <a class='iconLink linkGrey icon-create' href="board_price_edit2.html"></a>
                   </p>
                 </div>
                 <!-- 04 -->
@@ -279,7 +279,7 @@
                   <p class='table-box10'>2</p>
                   <p class='table-box10 t-red'>&nbsp;</p>
                   <p class='table-box10'>
-                    <a class='iconLink linkGrey icon-create' href="board_price_edit21.html"></a>
+                    <a class='iconLink linkGrey icon-create' href="board_price_edit2.html"></a>
                   </p>
                 </div>
                 <!-- 05 -->
@@ -292,7 +292,7 @@
                   <p class='table-box10'>2</p>
                   <p class='table-box10 t-red'>大單</p>
                   <p class='table-box10'>
-                    <a class='iconLink linkGrey icon-create' href="board_price_edit21.html"></a>
+                    <a class='iconLink linkGrey icon-create' href="board_price_edit2.html"></a>
                   </p>
                 </div>
                 <!-- 06 -->
@@ -305,7 +305,7 @@
                   <p class='table-box10'>2</p>
                   <p class='table-box10 t-red'>&nbsp;</p>
                   <p class='table-box10'>
-                    <a class='iconLink linkGrey icon-create' href="board_price_edit21.html"></a>
+                    <a class='iconLink linkGrey icon-create' href="board_price_edit2.html"></a>
                   </p>
                 </div>
                 <!-- 07 -->
@@ -318,7 +318,7 @@
                   <p class='table-box10'>2</p>
                   <p class='table-box10 t-red'>大單</p>
                   <p class='table-box10'>
-                    <a class='iconLink linkGrey icon-create' href="board_price_edit21.html"></a>
+                    <a class='iconLink linkGrey icon-create' href="board_price_edit2.html"></a>
                   </p>
                 </div>
                 <!-- 08 -->
@@ -331,7 +331,7 @@
                   <p class='table-box10'>2</p>
                   <p class='table-box10 t-red'>大單</p>
                   <p class='table-box10'>
-                    <a class='iconLink linkGrey icon-create' href="board_price_edit21.html"></a>
+                    <a class='iconLink linkGrey icon-create' href="board_price_edit2.html"></a>
                   </p>
                 </div>
                 <!-- 09 -->
@@ -344,7 +344,7 @@
                   <p class='table-box10'>2</p>
                   <p class='table-box10 t-red'>大單</p>
                   <p class='table-box10'>
-                    <a class='iconLink linkGrey icon-create' href="board_price_edit21.html"></a>
+                    <a class='iconLink linkGrey icon-create' href="board_price_edit2.html"></a>
                   </p>
                 </div>
                 <!-- 10 -->
@@ -357,7 +357,7 @@
                   <p class='table-box10'>2</p>
                   <p class='table-box10 t-red'>&nbsp;</p>
                   <p class='table-box10'>
-                    <a class='iconLink linkGrey icon-create' href="board_price_edit21.html"></a>
+                    <a class='iconLink linkGrey icon-create' href="board_price_edit2.html"></a>
                   </p>
                 </div>
               </div>
@@ -398,7 +398,7 @@
                   <p class='table-box10'>2</p>
                   <p class='table-box10 t-red'>&nbsp;</p>
                   <p class='table-box10'>
-                    <a class='iconLink linkGrey icon-create' href="board_price_edit21.html"></a>
+                    <a class='iconLink linkGrey icon-create' href="board_price_edit2.html"></a>
                   </p>
                 </div>
                 <!-- 02 -->
@@ -411,7 +411,7 @@
                   <p class='table-box10'>2</p>
                   <p class='table-box10 t-red'>&nbsp;</p>
                   <p class='table-box10'>
-                    <a class='iconLink linkGrey icon-create' href="board_price_edit21.html"></a>
+                    <a class='iconLink linkGrey icon-create' href="board_price_edit2.html"></a>
                   </p>
                 </div>
                 <!-- 03 -->
@@ -424,7 +424,7 @@
                   <p class='table-box10'>2</p>
                   <p class='table-box10 t-red'>&nbsp;</p>
                   <p class='table-box10'>
-                    <a class='iconLink linkGrey icon-create' href="board_price_edit21.html"></a>
+                    <a class='iconLink linkGrey icon-create' href="board_price_edit2.html"></a>
                   </p>
                 </div>
                 <!-- 04 -->
@@ -437,7 +437,7 @@
                   <p class='table-box10'>2</p>
                   <p class='table-box10 t-red'>&nbsp;</p>
                   <p class='table-box10'>
-                    <a class='iconLink linkGrey icon-create' href="board_price_edit21.html"></a>
+                    <a class='iconLink linkGrey icon-create' href="board_price_edit2.html"></a>
                   </p>
                 </div>
                 <!-- 05 -->
@@ -450,7 +450,7 @@
                   <p class='table-box10'>2</p>
                   <p class='table-box10 t-red'>大單</p>
                   <p class='table-box10'>
-                    <a class='iconLink linkGrey icon-create' href="board_price_edit21.html"></a>
+                    <a class='iconLink linkGrey icon-create' href="board_price_edit2.html"></a>
                   </p>
                 </div>
                 <!-- 06 -->
@@ -463,7 +463,7 @@
                   <p class='table-box10'>2</p>
                   <p class='table-box10 t-red'>&nbsp;</p>
                   <p class='table-box10'>
-                    <a class='iconLink linkGrey icon-create' href="board_price_edit21.html"></a>
+                    <a class='iconLink linkGrey icon-create' href="board_price_edit2.html"></a>
                   </p>
                 </div>
                 <!-- 07 -->
@@ -476,7 +476,7 @@
                   <p class='table-box10'>2</p>
                   <p class='table-box10 t-red'>大單</p>
                   <p class='table-box10'>
-                    <a class='iconLink linkGrey icon-create' href="board_price_edit21.html"></a>
+                    <a class='iconLink linkGrey icon-create' href="board_price_edit2.html"></a>
                   </p>
                 </div>
                 <!-- 08 -->
@@ -489,7 +489,7 @@
                   <p class='table-box10'>2</p>
                   <p class='table-box10 t-red'>大單</p>
                   <p class='table-box10'>
-                    <a class='iconLink linkGrey icon-create' href="board_price_edit21.html"></a>
+                    <a class='iconLink linkGrey icon-create' href="board_price_edit2.html"></a>
                   </p>
                 </div>
                 <!-- 09 -->
@@ -502,7 +502,7 @@
                   <p class='table-box10'>2</p>
                   <p class='table-box10 t-red'>大單</p>
                   <p class='table-box10'>
-                    <a class='iconLink linkGrey icon-create' href="board_price_edit21.html"></a>
+                    <a class='iconLink linkGrey icon-create' href="board_price_edit2.html"></a>
                   </p>
                 </div>
                 <!-- 10 -->
@@ -515,7 +515,7 @@
                   <p class='table-box10'>2</p>
                   <p class='table-box10 t-red'>&nbsp;</p>
                   <p class='table-box10'>
-                    <a class='iconLink linkGrey icon-create' href="board_price_edit21.html"></a>
+                    <a class='iconLink linkGrey icon-create' href="board_price_edit2.html"></a>
                   </p>
                 </div>
               </div>
@@ -556,7 +556,7 @@
                   <p class='table-box10'>2</p>
                   <p class='table-box10 t-red'>大單</p>
                   <p class='table-box10'>
-                    <a class='iconLink linkGrey icon-create' href="board_price_detail.html"></a>
+                    <a class='iconLink linkGrey icon-create' href="board_price_detail2.html"></a>
                   </p>
                 </div>
                 <!-- 02 -->
@@ -569,7 +569,7 @@
                   <p class='table-box10'>2</p>
                   <p class='table-box10 t-red'>大單</p>
                   <p class='table-box10'>
-                    <a class='iconLink linkGrey icon-create' href="board_price_detail.html"></a>
+                    <a class='iconLink linkGrey icon-create' href="board_price_detail2.html"></a>
                   </p>
                 </div>
                 <!-- 03 -->
@@ -582,7 +582,7 @@
                   <p class='table-box10'>2</p>
                   <p class='table-box10 t-red'>&nbsp;</p>
                   <p class='table-box10'>
-                    <a class='iconLink linkGrey icon-create' href="board_price_detail.html"></a>
+                    <a class='iconLink linkGrey icon-create' href="board_price_detail2.html"></a>
                   </p>
                 </div>
                 <!-- 04 -->
@@ -595,7 +595,7 @@
                   <p class='table-box10'>2</p>
                   <p class='table-box10 t-red'>&nbsp;</p>
                   <p class='table-box10'>
-                    <a class='iconLink linkGrey icon-create' href="board_price_detail.html"></a>
+                    <a class='iconLink linkGrey icon-create' href="board_price_detail2.html"></a>
                   </p>
                 </div>
                 <!-- 05 -->
@@ -608,7 +608,7 @@
                   <p class='table-box10'>2</p>
                   <p class='table-box10 t-red'>大單</p>
                   <p class='table-box10'>
-                    <a class='iconLink linkGrey icon-create' href="board_price_detail.html"></a>
+                    <a class='iconLink linkGrey icon-create' href="board_price_detail2.html"></a>
                   </p>
                 </div>
                 <!-- 06 -->
@@ -621,7 +621,7 @@
                   <p class='table-box10'>2</p>
                   <p class='table-box10 t-red'>&nbsp;</p>
                   <p class='table-box10'>
-                    <a class='iconLink linkGrey icon-create' href="board_price_detail.html"></a>
+                    <a class='iconLink linkGrey icon-create' href="board_price_detail2.html"></a>
                   </p>
                 </div>
                 <!-- 07 -->
@@ -634,7 +634,7 @@
                   <p class='table-box10'>2</p>
                   <p class='table-box10 t-red'>大單</p>
                   <p class='table-box10'>
-                    <a class='iconLink linkGrey icon-create' href="board_price_detail.html"></a>
+                    <a class='iconLink linkGrey icon-create' href="board_price_detail2.html"></a>
                   </p>
                 </div>
                 <!-- 08 -->
@@ -647,7 +647,7 @@
                   <p class='table-box10'>2</p>
                   <p class='table-box10 t-red'>大單</p>
                   <p class='table-box10'>
-                    <a class='iconLink linkGrey icon-create' href="board_price_detail.html"></a>
+                    <a class='iconLink linkGrey icon-create' href="board_price_detail2.html"></a>
                   </p>
                 </div>
                 <!-- 09 -->
@@ -660,7 +660,7 @@
                   <p class='table-box10'>2</p>
                   <p class='table-box10 t-red'>大單</p>
                   <p class='table-box10'>
-                    <a class='iconLink linkGrey icon-create' href="board_price_detail.html"></a>
+                    <a class='iconLink linkGrey icon-create' href="board_price_detail2.html"></a>
                   </p>
                 </div>
                 <!-- 10 -->
@@ -673,7 +673,7 @@
                   <p class='table-box10'>2</p>
                   <p class='table-box10 t-red'>&nbsp;</p>
                   <p class='table-box10'>
-                    <a class='iconLink linkGrey icon-create' href="board_price_detail.html"></a>
+                    <a class='iconLink linkGrey icon-create' href="board_price_detail2.html"></a>
                   </p>
                 </div>
               </div>
