--- a/board_product_category_edit2.html
+++ b/board_product_category_edit2.html
@@ -64,14 +64,14 @@
 
             <span class="m-menu-t">資深業務</span>
             <div class="m-smenu">
-              <a href="board_price_list.html">詢價列表</a>
-              <a href="board_purchase_note.html">採購筆記</a>
-              <a href="board_sales_report.html">業務報表</a>
+              <a href="board_price_list2.html">詢價列表</a>
+              <a href="board_sales_report2.html">業務報表</a>
             </div>
 
             <span class="m-menu-t">採購</span>
             <div class="m-smenu">
               <a href="board_purchase_list.html">採購取件</a>
+              <a href="board_purchase_note.html">採購筆記</a>
               <a href="board_purchase_report.html">採購報表</a>
             </div>
 
