--- a/board_country_detail.html
+++ b/board_country_detail.html
@@ -67,8 +67,8 @@
 
             <span class="m-menu-t">資深業務</span>
             <div class="m-smenu">
-              <a href="board_price_list.html">詢價列表</a>
-              <a href="board_sales_report.html">業務報表</a>
+              <a href="board_price_list2.html">詢價列表</a>
+              <a href="board_sales_report2.html">業務報表</a>
             </div>
 
             <span class="m-menu-t">採購</span>
