--- a/board_purchase_list.html
+++ b/board_purchase_list.html
@@ -63,8 +63,8 @@
 
             <span class="m-menu-t">資深業務</span>
             <div class="m-smenu">
-              <a href="board_price_list.html">詢價列表</a>
-              <a href="board_sales_report.html">業務報表</a>
+              <a href="board_price_list2.html">詢價列表</a>
+              <a href="board_sales_report2.html">業務報表</a>
             </div>
 
             <span class="m-menu-t">採購</span>
@@ -237,7 +237,7 @@
                   <p class='table-box10'>2</p>
                   <p class='table-box10 t-red'>大單</p>
                   <p class='table-box10'>
-                    <a class='iconLink linkGrey icon-create' href="board_price_edit2.html"></a>
+                    <a class='iconLink linkGrey icon-create' href="board_purchase_edit.html"></a>
                   </p>
                 </div>
                 <!-- 02 -->
@@ -250,7 +250,7 @@
                   <p class='table-box10'>2</p>
                   <p class='table-box10 t-red'>大單</p>
                   <p class='table-box10'>
-                    <a class='iconLink linkGrey icon-create' href="board_price_edit2.html"></a>
+                    <a class='iconLink linkGrey icon-create' href="board_purchase_edit.html"></a>
                   </p>
                 </div>
                 <!-- 03 -->
@@ -263,7 +263,7 @@
                   <p class='table-box10'>2</p>
                   <p class='table-box10 t-red'>&nbsp;</p>
                   <p class='table-box10'>
-                    <a class='iconLink linkGrey icon-create' href="board_price_edit2.html"></a>
+                    <a class='iconLink linkGrey icon-create' href="board_purchase_edit.html"></a>
                   </p>
                 </div>
                 <!-- 04 -->
@@ -276,7 +276,7 @@
                   <p class='table-box10'>2</p>
                   <p class='table-box10 t-red'>&nbsp;</p>
                   <p class='table-box10'>
-                    <a class='iconLink linkGrey icon-create' href="board_price_edit2.html"></a>
+                    <a class='iconLink linkGrey icon-create' href="board_purchase_edit.html"></a>
                   </p>
                 </div>
                 <!-- 05 -->
@@ -289,7 +289,7 @@
                   <p class='table-box10'>2</p>
                   <p class='table-box10 t-red'>大單</p>
                   <p class='table-box10'>
-                    <a class='iconLink linkGrey icon-create' href="board_price_edit2.html"></a>
+                    <a class='iconLink linkGrey icon-create' href="board_purchase_edit.html"></a>
                   </p>
                 </div>
                 <!-- 06 -->
@@ -302,7 +302,7 @@
                   <p class='table-box10'>2</p>
                   <p class='table-box10 t-red'>&nbsp;</p>
                   <p class='table-box10'>
-                    <a class='iconLink linkGrey icon-create' href="board_price_edit2.html"></a>
+                    <a class='iconLink linkGrey icon-create' href="board_purchase_edit.html"></a>
                   </p>
                 </div>
                 <!-- 07 -->
@@ -315,7 +315,7 @@
                   <p class='table-box10'>2</p>
                   <p class='table-box10 t-red'>大單</p>
                   <p class='table-box10'>
-                    <a class='iconLink linkGrey icon-create' href="board_price_edit2.html"></a>
+                    <a class='iconLink linkGrey icon-create' href="board_purchase_edit.html"></a>
                   </p>
                 </div>
                 <!-- 08 -->
@@ -328,7 +328,7 @@
                   <p class='table-box10'>2</p>
                   <p class='table-box10 t-red'>大單</p>
                   <p class='table-box10'>
-                    <a class='iconLink linkGrey icon-create' href="board_price_edit2.html"></a>
+                    <a class='iconLink linkGrey icon-create' href="board_purchase_edit.html"></a>
                   </p>
                 </div>
                 <!-- 09 -->
@@ -341,7 +341,7 @@
                   <p class='table-box10'>2</p>
                   <p class='table-box10 t-red'>大單</p>
                   <p class='table-box10'>
-                    <a class='iconLink linkGrey icon-create' href="board_price_edit2.html"></a>
+                    <a class='iconLink linkGrey icon-create' href="board_purchase_edit.html"></a>
                   </p>
                 </div>
                 <!-- 10 -->
@@ -354,7 +354,7 @@
                   <p class='table-box10'>2</p>
                   <p class='table-box10 t-red'>&nbsp;</p>
                   <p class='table-box10'>
-                    <a class='iconLink linkGrey icon-create' href="board_price_edit2.html"></a>
+                    <a class='iconLink linkGrey icon-create' href="board_purchase_edit.html"></a>
                   </p>
                 </div>
               </div>
@@ -395,7 +395,7 @@
                   <p class='table-box10'>2</p>
                   <p class='table-box10 t-red'>&nbsp;</p>
                   <p class='table-box10'>
-                    <a class='iconLink linkGrey icon-eye' href="board_price_detail.html"></a>
+                    <a class='iconLink linkGrey icon-eye' href="board_purchase_detail.html"></a>
                   </p>
                 </div>
                 <!-- 02 -->
@@ -408,7 +408,7 @@
                   <p class='table-box10'>2</p>
                   <p class='table-box10 t-red'>&nbsp;</p>
                   <p class='table-box10'>
-                    <a class='iconLink linkGrey icon-eye' href="board_price_detail.html"></a>
+                    <a class='iconLink linkGrey icon-eye' href="board_purchase_detail.html"></a>
                   </p>
                 </div>
                 <!-- 03 -->
@@ -434,7 +434,7 @@
                   <p class='table-box10'>2</p>
                   <p class='table-box10 t-red'>&nbsp;</p>
                   <p class='table-box10'>
-                    <a class='iconLink linkGrey icon-eye' href="board_price_detail.html"></a>
+                    <a class='iconLink linkGrey icon-eye' href="board_purchase_detail.html"></a>
                   </p>
                 </div>
                 <!-- 05 -->
@@ -447,7 +447,7 @@
                   <p class='table-box10'>2</p>
                   <p class='table-box10 t-red'>大單</p>
                   <p class='table-box10'>
-                    <a class='iconLink linkGrey icon-eye' href="board_price_detail.html"></a>
+                    <a class='iconLink linkGrey icon-eye' href="board_purchase_detail.html"></a>
                   </p>
                 </div>
                 <!-- 06 -->
@@ -473,7 +473,7 @@
                   <p class='table-box10'>2</p>
                   <p class='table-box10 t-red'>大單</p>
                   <p class='table-box10'>
-                    <a class='iconLink linkGrey icon-eye' href="board_price_detail.html"></a>
+                    <a class='iconLink linkGrey icon-eye' href="board_purchase_detail.html"></a>
                   </p>
                 </div>
                 <!-- 08 -->
@@ -486,7 +486,7 @@
                   <p class='table-box10'>2</p>
                   <p class='table-box10 t-red'>大單</p>
                   <p class='table-box10'>
-                    <a class='iconLink linkGrey icon-eye' href="board_price_detail.html"></a>
+                    <a class='iconLink linkGrey icon-eye' href="board_purchase_detail.html"></a>
                   </p>
                 </div>
                 <!-- 09 -->
@@ -499,7 +499,7 @@
                   <p class='table-box10'>2</p>
                   <p class='table-box10 t-red'>大單</p>
                   <p class='table-box10'>
-                    <a class='iconLink linkGrey icon-create' href="board_price_edit2.html"></a>
+                    <a class='iconLink linkGrey icon-create' href="board_purchase_detail.html"></a>
                   </p>
                 </div>
                 <!-- 10 -->
@@ -512,7 +512,7 @@
                   <p class='table-box10'>2</p>
                   <p class='table-box10 t-red'>&nbsp;</p>
                   <p class='table-box10'>
-                    <a class='iconLink linkGrey icon-eye' href="board_price_detail.html"></a>
+                    <a class='iconLink linkGrey icon-eye' href="board_purchase_detail.html"></a>
                   </p>
                 </div>
               </div>
